--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head> <!-- everything in the "head" tag is for the browser and search engine. It won't appear on your website -->
 	<meta charset="utf-8"> <!-- here we are announcing the character encoding -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- here we are giving instructions on how to control the page's dimensions and scaling -->
-	<meta name="author" content="YOUR NAME"> <!-- here we are announcing the author (you!)-->
-	<meta name="description" content="DESCRIBE YOUR SITE IN A SENTENCE"> <!-- here we are describing what this site is about-->
-	<title>TITLE HERE</title> <!-- here is the title of the site -->
+	<meta name="author" content="Emily Simone"> <!-- here we are announcing the author (you!)-->
+	<meta name="description" content="Information on Building Foundations Tutoring Program"> <!-- here we are describing what this site is about-->
+	<title>Building Foundations Tutoring Program</title> <!-- here is the title of the site -->
 	<!-- below is a link to our CSS "stylesheet" so our webpage can look nice -->
-	<!-- <link href="styles.css" rel="stylesheet" type="text/css">          -->
+	<link href="styles.css" rel="stylesheet" type="text/css">         
 	<meta property="og:image" content="IMAGE URL HERE"> <!-- here is the main image for the site -->
 	<meta property="og:url" content="URL OF SITE HERE"> <!-- here is the URL of the site -->
 </head> 
@@ -26,10 +26,9 @@
 	</header> 
 
 	<main> <!-- The "main" tag is for the main content (no headers or footers) -->
-		<section id="aboutMe" class="section"> <!-- the "section" tag is used for content! Learn more (or possibly get more confused) here: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/section -->
-			<h1>About Me</h1> <!-- the "h1" tag is for a top-level header -->
-			<p>My name is friend. I design and build things for people. I build play experiences,
-				installations, experimental video games, stories, communities, spaces, and events.</p> <!-- the "p" tag is for text -->
+		<section id="About" class="section"> <!-- the "section" tag is used for content! Learn more (or possibly get more confused) here: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/section -->
+			<h1>About the Program</h1> <!-- the "h1" tag is for a top-level header -->
+			<p>We are a trauma-informed tutoring program that works one-to-one with clients who receive services from Children’s Aid Societies. Our program started in 2017 in partnership with Highland Shores Children’s Aid Society. Since then we have expanded our programming to fit with the needs of additional community agencies. We are a group of highly trained educators who recognize the need for emotional connection when attempting to support clients.</p> <!-- the "p" tag is for text -->
 			<h2>Why</h2> <!-- the "h2" tag is for a second-level header -->
 			<p>I'm curious about people: how we express, how we connect, and how we experience the world around us. I
 				enjoy
@@ -49,7 +48,7 @@
 			<p>I make cooperative games, huge games for entire cities, and experimental games incorporating things like
 				smell.</p>
 			<br> <!-- the "br" tag makes a line break. There are many other ways to do this with CSS as well -->
-			<img src="img/common.jpg" alt="An image of a graph with many nodes inside a purple circle." class="work-Img"> <!-- the "img" tag is for inserting an image. Each image should always have an "alt" for screenreaders -->
+			<img src="img/emotions.png" alt="An image of a graphic with many faces showing different emotions." class="work-Img"> <!-- the "img" tag is for inserting an image. Each image should always have an "alt" for screenreaders -->
 			<img src="img/closer.jpg" alt="A photograph of two people standing in front of an enormous screen with pink spikes, a score, and another person watching them." class="work-Img">
 			<img src="img/burst.jpg" alt="An image of a woman gesturing towards her face while surrounded with gauzy white fabric and colourful balloons." class="work-Img">
 		</section>
@@ -63,7 +62,7 @@
 	</main>
 
 	<footer> <!-- the "footer" tag is for content at the bottom of the page -->
-		<a href="mailto:%20marieflanagan@gmail.com" target="blank"><img src="img/social-icons/mail.svg" alt="Email"
+		<a href="mailto:foundationstutoringprogram@gmail.com" target="blank"><img src="img/social-icons/mail.svg" alt="Email"
 				class="feather"></a>
 		<a href="https://linkedin.com/in/marieflanagan/" target="blank"><img src="img/social-icons/linked-in.svg"
 				alt="LinkedIn" class="feather"></a>
